# pattern_partition_prediction

./: Cargo.toml  README.md
src/: error.rs  lib.rs
test_assets/: PaPa_rates.txt  PaPa_rates_indel.txt
