[package]
name = "pattern_partition_prediction"
version = "0.1.2"
authors = ["Jörn Bethune <joern@localhost>"]
edition = "2018"
description = "Reading and querying k-mer pattern partition information"
readme = "README.md"
repository = "https://github.com/jbethune/pattern_partition_prediction/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabfile = "0.2.1"
